tdf#153548 sc: don't disable all state when IsFormulaMode

This allows "Cycle Cell Reference Types" (aka F4) to remain
active when switching between unfrozen and frozen sheets
in order to build a formula.

workdir/SdiTarget/sc/sdi/scslots.hxx is a good place to
find the linkages between slot names and numbers.
I also added the slots I saw on my machine that tested
as usable during formula-building.

I considered the following (which were in the set when I tested):
SID_INSERT_FIELD_DATE_VAR
SID_INSERT_FIELD_TITLE
SID_INSERT_FIELD_SHEET
FID_INSERT_NAME
SID_CELL_FORMAT_RESET
FN_INSERT_HARDHYPHEN
FN_INSERT_SOFT_HYPHEN
SID_TRANSLITERATE_SENTENCE_CASE
SID_TRANSLITERATE_TITLE_CASE
SID_TRANSLITERATE_TOGGLE_CASE
SID_TRANSLITERATE_*
SID_INSERT_WJ
SID_INSERT_ZWSP
SID_INSERT_LRM
SID_INSERT_RLM
SID_CHAR_DLG
SID_ATTR_INSERT
SID_SELECTALL # didn't actually select everything
SID_DELETE
SID_PASTE # seems to work magically, probably b/c FastCall = TRUE
SID_COPY
SID_CUT # didn't actually cut everything

Change-Id: I8b7f678a2f37a79474796a568a589b83abdde4de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148144
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Eike Rathke <erack@redhat.com>